--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hi all, Welcome to My Blog</h1>
     <h2>this is so cool right</h2>
+    <p>I am btech it student in cusat soe.</p>
 </body>
 </html>
