--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <h1>Hi all, Welcome to My Blog</h1>
     <h2>this is so cool right</h2>
     <p>I am btech it student in cusat soe.</p>
+    <pre>
+        this is really great to be a part of github
+             I wish I could contribute more
+    </pre>
 </body>
 </html>
