added unordered list

--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
         this is really great to be a part of github
              I wish I could contribute more
     </pre>
+    <ul>
+        <h3>apps which I often use</h3>
+        <li>github</li>
+        <li>chrome</li>
+        <li>brave</li>
+        <li>spotify</li>
+    </ul>
 </body>
 </html>
